--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.33",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "csv": "^5.3.2",
     "csvtojson": "^2.0.10",
@@ -21,6 +22,7 @@
     "moment": "^2.27.0",
     "registry-js": "^1.9.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
