--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.33",
     "chart.js": "^2.9.3",
+    "chokidar": "^3.4.1",
     "core-js": "^3.6.5",
     "csv": "^5.3.2",
     "csvtojson": "^2.0.10",
